--- a/OpenFreeAPI.Google.Translate/OpenFreeAPI.Google.Translate.csproj
+++ b/OpenFreeAPI.Google.Translate/OpenFreeAPI.Google.Translate.csproj
@@ -4,4 +4,8 @@
     <TargetFrameworks>netcoreapp3.1;netstandard2.1</TargetFrameworks>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Properties\" />
+  </ItemGroup>
+
 </Project>
